--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -6,8 +6,11 @@
         width: 100%
         height: 30vh
     
-    &__img 
+    &__img
+        width: 100%
+        height: 30vh 
         object-fit: cover
+        overflow: hidden
         z-index: -1 //no mover
 
         //Landscape
