--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -8,11 +8,11 @@
     
     &__img
         width: 100%
-        height: 30vh 
+        height: 100vh
+        position: fixed
         object-fit: cover
         overflow: hidden
         z-index: -1 //no mover
-
         //Landscape
         @media screen and (min-width: 576px)
             position: absolute
@@ -31,6 +31,7 @@
             top: -200px
 
     &__h1
+        font-size: 2em
         color: #fff
         //* Portrait */
         @media screen and (min-width: 576px)
@@ -44,6 +45,9 @@
         //* Desktop */
         @media screen and (min-width: 1280px)
             font-size: 4em
+
+    &__subtitle
+        font-size: 1em
 
     &__hr
         height: 3px
@@ -75,4 +79,10 @@
         &__h2
             font-weight: bold
             padding: 30px 0
+
+        &__img
+            cursor: pointer
+
+    &-pagination
+        margin: auto
 
