--- a/scss/theme/6-Components/_header.sass
+++ b/scss/theme/6-Components/_header.sass
@@ -17,17 +17,26 @@ header
         padding: 0 auto !important
 
 .navbar-nav 
-    height: 60vh
+    height: 63vh
+    @media screen and (min-width: 576px)
+        height: 30vh
     @media screen and (min-width: 768px)
-        height: 72vh
+        height: 78vh
     @media screen and (min-width: 1024px)
         height: auto
 
 .nav-item
+    width: 200px
+    padding: 20px 10px
+    text-align: center
+    @media screen and (min-width: 576px)
+        padding: 10px 0
+        margin: auto
     @media screen and (min-width: 768px)
         margin: auto
     @media screen and (min-width: 1024px)
-        width: 150px
+        width: 100px
+        padding: 40px 0
         height: 75px
         text-align: center
         font-size: 1em
