--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -4,12 +4,13 @@
 
     .view //bootstrap view
         width: 100%
-        height: 30vh
+        height: 35vh
     
     &__img
         width: 100%
         height: 100vh
         position: fixed
+        top: 0
         object-fit: cover
         overflow: hidden
         z-index: -1 //no mover
