--- a/scss/theme/2-Tools/tools.sass
+++ b/scss/theme/2-Tools/tools.sass
@@ -1,5 +1,10 @@
 /*=================== Tools ===================*/
 
-/* empty */
-
-    
+@mixin img
+    max-width: 100%
+    height: auto
+    position: relative
+    top: -100px
+    object-fit: cover
+    overflow: hidden
+    z-index: -2 //no mover
