--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -2,18 +2,17 @@
 .o-section
     margin-top: 160px
 
-    .view //bootstrap view
+    &-view
         width: 100%
-        height: 35vh
+        height: 40vh
     
     &__img
         width: 100%
-        height: 100vh
-        position: fixed
-        top: 0
+        height: 80vh
         object-fit: cover
-        overflow: hidden
-        z-index: -1 //no mover
+        position: absolute
+        top: 0
+        z-index: -1
         //Landscape
         @media screen and (min-width: 576px)
             position: absolute
@@ -25,12 +24,51 @@
         //Laptop
         @media screen and (min-width: 1024px)
             position: absolute
-            top: -200px
+            top: 0
         //Desktop
         @media screen and (min-width: 1280px)
             position: absolute
             top: -200px
-
+        &--services, &--article, 
+            width: 100%
+            height: 100%
+            //Landscape
+            @media screen and (min-width: 576px)
+                position: relative
+                top: 0
+            //Tablets
+            @media screen and (min-width: 768px)
+                position: relative
+                top: -100px
+            //Laptop
+            @media screen and (min-width: 1024px)
+                position: relative
+                top: -400px
+                left: 0
+            //Desktop
+            @media screen and (min-width: 1280px)
+                position: relative
+                top: -300px
+        &--contact
+            width: 100%
+            height: 100%
+            //Landscape
+            @media screen and (min-width: 576px)
+                position: relative
+                top: 0
+            //Tablets
+            @media screen and (min-width: 768px)
+                position: relative
+                top: 0
+            //Laptop
+            @media screen and (min-width: 1024px)
+                position: relative
+                top: -400px
+                left: 0
+            //Desktop
+            @media screen and (min-width: 1280px)
+                position: relative
+                top: -300px
     &__h1
         font-size: 2em
         color: #fff
@@ -42,10 +80,10 @@
             font-size: 4em
         //* Laptop */
         @media screen and (min-width: 1024px)
-            font-size: 4em
+            font-size: 3em
         //* Desktop */
         @media screen and (min-width: 1280px)
-            font-size: 4em
+            font-size: 3em
 
     &__subtitle
         font-size: 1em
@@ -57,11 +95,11 @@
         transform: skew(33deg)
 
         &--left
-            margin: 10px auto 20px 0
+            margin: 10px auto 10px 0
         &--right
-            margin: 10px 0 20px auto
+            margin: 10px 0 10px auto
         &--center
-        margin: 10px auto 20px auto
+        margin: 10px auto 10px auto
     
     &-content
         &-wrapper
