--- a/scss/theme/6-Components/_header.sass
+++ b/scss/theme/6-Components/_header.sass
@@ -36,7 +36,7 @@ header
         margin: auto
     @media screen and (min-width: 1024px)
         width: 100px
-        padding: 40px 0
+        padding: 0
         height: 75px
         text-align: center
         font-size: 1em
